# SLAM

./: README.md
Design/: 00 Rose.SLDASM  AssemGearbox_Motor.SLDASM  Kit_Final.SLDPRT  Rose - Bottom.SLDPRT  Rose - Hinge.SLDPRT  Rose - Motor_body.SLDPRT  Rose - Nail.SLDPRT  Rose - Top.SLDPRT  Rose - Wheel.SLDPRT  Rose - Wheel_rod_lo.SLDPRT  Rose - Wheel_rod_sh.SLDPRT
arduino/: MPU6050_.h  Motors.h  Rose.ino  Ultrasonic1.h  Ultrasonic2.h  Ultrasonic3.h
pro/: 11.sh  33.sh  5.sh  userguide.txt
pro/src/mybot_control/: CMakeLists.txt  package.xml
pro/src/mybot_control/Rose/: Motors.h  Rose.ino  Untitled Document  VoltageSense.h  publish two sonar.txt  testsonar.cpp
pro/src/mybot_control/launch/: driver.launch
pro/src/mybot_control/run/: base_controller.cpp  velocityLogger.py
pro/src/mybot_description/: package.xml
pro/src/mybot_description/launch/: mybot_rviz.launch
pro/src/mybot_description/rviz/: amcl.rviz  mapping.rviz
pro/src/mybot_description/urdf/: mybot.gazebo  mybot.gazebo~.xml  mybot.xacro  mybota.gazebo~.xml  mybotw.gazebo~.xml
pro/src/mybot_gazebo/: package.xml
pro/src/mybot_gazebo/launch/: mybot_world.launch~.xml
pro/src/mybot_navigation/: package.xml
pro/src/mybot_navigation/launch/: amcl_demo.launch  movebasenew.launch
pro/src/mybot_navigation/maps/: test_map.yaml
